# portable_power

./: README.md  constants.py  main.py  portable_power.py  pyproject.toml
.streamlit/: config.toml
data/: filled_load_df.csv  gen_fuel_eff_curves.csv
notebooks/: generator_bess_modelling.ipynb
pages/: ⚙️_Generator_Sizing.py  📊_Modelling.py  🔋_Optimisation.py
